trunk/Archive2/74/392c59cfc3ef70/output
main.cpp: In function 'int main()':
main.cpp:7:25: error: invalid conversion from 'char**' to 'const char**' [-fpermissive]
     const char** pcc = &pc;   // not allowed (thankfully!)
                         ^
